fix: prevent jumpy scrolls when tabbing between deck and notes

--- a/src/components/deck-display/deck-display.module.css
+++ b/src/components/deck-display/deck-display.module.css
@@ -61,7 +61,7 @@
   position: sticky;
   top: 0;
   background-color: var(--palette-0);
-  z-index: 1;
+  z-index: 2;
 }
 
 .tab {
